fix: correct mobile menu button alignment vol.11

--- a/src/sass/blocks/mobile-catalog.scss
+++ b/src/sass/blocks/mobile-catalog.scss
@@ -49,9 +49,8 @@
 
 .mobile-catalog__link-icon {
   position: absolute;
-  top: 50%;
+  top: 17px;
   left: 7px;
-  transform: translateY(-50%);
   display: block;
   margin-right: 3px;
   fill: transparent;
